--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "name": "peer-messenger-peerserver",
   "version": "0.0.1",
   "dependencies": {
+    "express": "^4.15.2",
     "peer": "^0.2.8"
   }
 }
