added cors to server

--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "name": "peer-messenger-peerserver",
   "version": "0.0.1",
   "dependencies": {
+    "cors": "^2.8.1",
     "express": "^4.15.2",
     "lodash": "^4.17.4",
     "peer": "^0.2.8"
